--- a/public/restaurant/Sean's Saladworks.html
+++ b/public/restaurant/Sean's Saladworks.html
@@ -2,9 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sean's SaladWorks</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
-<body>
+
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="images/ssw.jpg" alt="SSW Logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Reservations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Specials</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            More
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Meet the staff</a></li>
+                            <li><a class="dropdown-item" href="#">Locations</a></li>
+                            <li><a class="dropdown-item" href="#">Social Media</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+<header class="masthead" id="home">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12 text-center">
+
+                <div class="card" style="width: 19rem; height: 24rem;">
+                    <div class="card-body">
+                        <h3 class="card-title" style=" font-family: 'Franklin Gothic Book', fantasy;
+                        font-size: 30pt;"><b>Welcome</b> </h3>
+                        <p class="card-text" style="color: midnightblue; padding: 18px;">Welcome to Sean's SaladWorks, where we offer delicious, scratch-made, craveable favorites served from the heart.
+                            You’ll find fresh, healthy fare and gracious hospitality at our sitdown salad restaurant.</p>
+                        <a href="Reservations.html" class="btn btn-primary" style="background: lightskyblue; border: none">Make a reservation</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+<div class="content">
+    <div class="jumbotron text-center">
+        <h1>Sean's Salad Works</h1>
+        <p>
+            Sean's Salad Works was a dream come true idea designed by Sean Hussey and Skyler Vez during thier college days at Seattle Pacific University.
+            Aspiring to cut down on cafeteria food, Chef Sean began to create and sell custom salads to friends and students at SPU.
+            Chef Skyler came and added his own technical elements to the business and in 2021, the two established the company in the heart of Queen Anne Washington.
+            Today business is booming as critics have rated Sean's Salad Works a "top five restauraunt in the Seattle area."
+            We aspired to deliver the best quality dishes, to be clear about our ingrediants, and to treat you with respect and kindness from the moment you walk in.
+
+        </p>
+
+    </div>
+
+</div>
+
 
 </body>
+
 </html>
