--- a/public/restaurant/Sean's Saladworks.html
+++ b/public/restaurant/Sean's Saladworks.html
@@ -17,22 +17,22 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Menu</a>
+                        <a class="nav-link active" aria-current="page" href="mainmenu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Reservations</a>
+                        <a class="nav-link" href="Reservations.html">Reservations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Specials</a>
+                        <a class="nav-link" href="Specials.html">Specials</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             More
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Meet the staff</a></li>
-                            <li><a class="dropdown-item" href="#">Locations</a></li>
-                            <li><a class="dropdown-item" href="#">Social Media</a></li>
+                            <li><a class="dropdown-item" href="Staff.html">Meet the staff</a></li>
+                            <li><a class="dropdown-item" href="Locations.html">Locations</a></li>
+                            <li><a class="dropdown-item" href="Socialmedia.html">Social Media</a></li>
                         </ul>
                     </li>
                 </ul>
