--- a/public/restaurant/Sean's Saladworks.html
+++ b/public/restaurant/Sean's Saladworks.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
+// Header------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
 <body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/ssw.jpg" alt="SSW Logo"></a>
+            <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,11 +42,12 @@
         </div>
     </nav>
 
-<header class="masthead" id="home">
+//Welcome Card------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+<header class="masthead" class="home">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12 text-center">
-
                 <div class="card" style="width: 19rem; height: 24rem;">
                     <div class="card-body">
                         <h3 class="card-title" style=" font-family: 'Franklin Gothic Book', fantasy;
@@ -59,6 +62,8 @@
     </div>
 </header>
 
+//Bottom Box ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
 <div class="content">
     <div class="jumbotron text-center">
         <h1>Sean's Salad Works</h1>
@@ -70,9 +75,7 @@
             We aspired to deliver the best quality dishes, to be clear about our ingrediants, and to treat you with respect and kindness from the moment you walk in.
 
         </p>
-
     </div>
-
 </div>
 
 
