--- a/public/restaurant/Sean's Saladworks.html
+++ b/public/restaurant/Sean's Saladworks.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Sean's SaladWorks</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
-// Header------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+<!--Header-->
 
 <body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-midnightblue bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,17 +42,17 @@
         </div>
     </nav>
 
-//Welcome Card------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+<!--Welcome Card-->
 
 <header class="masthead" class="home">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12 text-center">
-                <div class="card" style="width: 19rem; height: 24rem;">
+                <div class="card" style="width: 16rem; height: 24rem;">
                     <div class="card-body">
                         <h3 class="card-title" style=" font-family: 'Franklin Gothic Book', fantasy;
                         font-size: 30pt;"><b>Welcome</b> </h3>
-                        <p class="card-text" style="color: midnightblue; padding: 18px;">Welcome to Sean's SaladWorks, where we offer delicious, scratch-made, craveable favorites served from the heart.
+                        <p class="card-text" style="color: midnightblue; padding: 18px; font-size: 17px;">Welcome to Sean's SaladWorks, where we offer delicious, scratch-made, craveable favorites served from the heart.
                             You’ll find fresh, healthy fare and gracious hospitality at our sitdown salad restaurant.</p>
                         <a href="Reservations.html" class="btn btn-primary" style="background: lightskyblue; border: none">Make a reservation</a>
                     </div>
@@ -62,7 +62,7 @@
     </div>
 </header>
 
-//Bottom Box ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+<!--Bottom Box-->
 
 <div class="content">
     <div class="jumbotron text-center">
