--- a/public/restaurant/Specials.html
+++ b/public/restaurant/Specials.html
@@ -2,11 +2,92 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sean's SaladWorks</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-<body>
 
-<img src="/images/salad.jpeg" alt="SSW Logo">
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="mainmenu.html">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Reservations.html">Reservations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Specials.html">Specials</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        More
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="Staff.html">Meet the staff</a></li>
+                        <li><a class="dropdown-item" href="Locations.html">Locations</a></li>
+                        <li><a class="dropdown-item" href="Socialmedia.html">Social Media</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<!--Menu-->
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Summer Peach Salad - $10.50</b>
+        <br>
+        <br>
+        Calories ~ 240
+    </div>
+
+    <div class="picture">
+        <img src="/images/peachsalad.jpg" width="74%" height=auto>
+    </div>
+
+</div>
+
+<div class="content">
+    <div class="jumbotron text-center">
+        <p>A healthy, bright summer salad using fresh peaches, feta and pecans. A surprising way to use fresh peaches – delicious and tasty. The peaches are sweet but the salty feta and a simple, white wine vinaigrette balances things out – mixed greens, combined with crunchy nuts and a little red onion tops the salad off to perfection.</p>
+    </div>
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Fresh Caught Shrimp Salad - $12</b>
+        <br>
+        <br>
+        Calories ~ 290
+    </div>
+
+    <div class="picture">
+        <img src="/images/shrimp salad.jpg" width="85%" height=auto>
+    </div>
+
+</div>
+
+<div class="content">
+    <div class="jumbotron text-center">
+        <p>This shrimp salad is a blend of tender shrimp, fresh vegetables, dill and seasonings, all coated in a creamy avocados. We brightened it with red onion, celery, and a light mayo dressing with Dijon and lemon zest for zing. This meal is high in protein and is for those with hunger after a long days work.</p>
+    </div>
+</div>
+
 
 </body>
 </html>
