--- a/public/restaurant/Reservations.html
+++ b/public/restaurant/Reservations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sean's SaladWorks</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
@@ -41,6 +41,101 @@
 </nav>
 
 
-</body>
+<!--Menu-->
+<br>
 
+<div class="center">
+
+    <div class="title">
+        <b>Sean Hussey</b>
+        <br>
+        <br>
+        Owner / Head Chef
+    </div>
+
+    <div class="picture">
+        <img src="/images/Sean.png" width="52%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Skyler Vez</b>
+        <br>
+        <br>
+        Owner / Head Chef
+    </div>
+
+    <div class="picture">
+        <img src="/images/IMG_0809.JPG" width="55.5%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Helen Miller</b>
+        <br>
+        <br>
+        Sous Chef
+    </div>
+
+    <div class="picture">
+        <img src="/images/helen.jpg" width="42%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Chad Bostwick</b>
+        <br>
+        <br>
+        Chef de Partie
+    </div>
+
+    <div class="picture">
+        <img src="/images/Chad.jpg" width="68.5%" height=auto%>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Grayson Jones</b>
+        <br>
+        <br>
+        Kitchen Porter
+    </div>
+
+    <div class="picture">
+        <img src="/images/Grayson.jpeg" width="185%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+
+<!--Bottom Box-->
+
+<div class="content">
+    <div class="jumbotron text-center">
+        <p>We are thankful for our staff and for the abilities and experiences that has shaped their cooking expertise over the years. All these members - and more - have contributed to the founding and success of Sean's Salad Works.</p>
+    </div>
+</div>
+</body>
 </html>
