--- a/public/restaurant/Socialmedia.html
+++ b/public/restaurant/Socialmedia.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!Doctype Html>
 
-</body>
+<Head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <Title>
+        Add the Sticky icons of social media
+    </Title>
+    <style>
+        /* Style the Sticky icons on web page */
+        .stickyicon-list {
+            position: fixed;
+            top: 200px;
+            transform: translateY(-50%);
+        }
+        .stickyicon-list a {
+            display: block;
+            text-align: center;
+            padding: 8px;
+            transition: all 0.5s ease;
+            color: white;
+            font-size: 20px;
+        }
+        /* HOver affect on sticky social media icons */
+        .stickyicon-list a:hover {
+            color: #000;
+            width:10px;
+        }
+
+        /* Now we have to design each icon of social media */
+        .facebook {
+            background: #3b5998;
+            color: white;
+        }
+        .twitter {
+            color: white;
+            background: #00acee;
+        }
+        .linkedin {
+            background: #0e76a8;
+            color: white;
+        }
+        .google {
+            color: white;
+            background: #db4a39;
+        }
+        .instagram {
+            background: #3f729b;
+            color: white;
+        }
+        .youtube {
+            color: white;
+            background: #c4302b;
+        }
+        /*.color{*/
+        /*    background-color: lightskyblue;*/
+        /*}*/
+    </style>
+</Head>
+<Body class="color">
+<h1 class="socialtext">To the left are our various social medias. Thanks for stopping by.</h1>
+
+<br>
+
+<div class="stickyicon-list">
+    <a href="https://www.google.com/search?q=computer+science+meme&tbm=isch&ved=2ahUKEwiT86qzirTwAhVW9Z4KHR7CADwQ2-cCegQIABAA&oq=computer+science+meme&gs_lcp=CgNpbWcQAzIECCMQJzIFCAAQsQMyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEB46BggAEAUQHjoGCAAQCBAeUO0OWNgPYKMRaABwAHgAgAFQiAGKAZIBATKYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Fl6TYJOQHtbq-wSehIPgAw&bih=947&biw=1920&rlz=1C1CHBF_enUS748US748&safe=strict#imgrc=ESAFXZm5PaaxYM" class="facebook">
+        <i class="fa fa-facebook"></i>
+    </a>
+    <a href="https://www.google.com/search?q=computer+science+meme&tbm=isch&ved=2ahUKEwiT86qzirTwAhVW9Z4KHR7CADwQ2-cCegQIABAA&oq=computer+science+meme&gs_lcp=CgNpbWcQAzIECCMQJzIFCAAQsQMyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEB46BggAEAUQHjoGCAAQCBAeUO0OWNgPYKMRaABwAHgAgAFQiAGKAZIBATKYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Fl6TYJOQHtbq-wSehIPgAw&bih=947&biw=1920&rlz=1C1CHBF_enUS748US748&safe=strict#imgrc=ESAFXZm5PaaxYM" class="twitter">
+        <i class="fa fa-twitter"></i>
+    </a>
+    <a href="https://www.google.com/search?q=computer+science+meme&tbm=isch&ved=2ahUKEwiT86qzirTwAhVW9Z4KHR7CADwQ2-cCegQIABAA&oq=computer+science+meme&gs_lcp=CgNpbWcQAzIECCMQJzIFCAAQsQMyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEB46BggAEAUQHjoGCAAQCBAeUO0OWNgPYKMRaABwAHgAgAFQiAGKAZIBATKYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Fl6TYJOQHtbq-wSehIPgAw&bih=947&biw=1920&rlz=1C1CHBF_enUS748US748&safe=strict#imgrc=ESAFXZm5PaaxYM" class="linkedin">
+        <i class="fa fa-linkedin"></i>
+    </a>
+    <a href="https://www.google.com/search?q=computer+science+meme&tbm=isch&ved=2ahUKEwiT86qzirTwAhVW9Z4KHR7CADwQ2-cCegQIABAA&oq=computer+science+meme&gs_lcp=CgNpbWcQAzIECCMQJzIFCAAQsQMyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEB46BggAEAUQHjoGCAAQCBAeUO0OWNgPYKMRaABwAHgAgAFQiAGKAZIBATKYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Fl6TYJOQHtbq-wSehIPgAw&bih=947&biw=1920&rlz=1C1CHBF_enUS748US748&safe=strict#imgrc=ESAFXZm5PaaxYM" class="google">
+        <i class="fa fa-google"></i>
+    </a>
+    <a href="https://www.google.com/search?q=computer+science+meme&tbm=isch&ved=2ahUKEwiT86qzirTwAhVW9Z4KHR7CADwQ2-cCegQIABAA&oq=computer+science+meme&gs_lcp=CgNpbWcQAzIECCMQJzIFCAAQsQMyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEB46BggAEAUQHjoGCAAQCBAeUO0OWNgPYKMRaABwAHgAgAFQiAGKAZIBATKYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Fl6TYJOQHtbq-wSehIPgAw&bih=947&biw=1920&rlz=1C1CHBF_enUS748US748&safe=strict#imgrc=ESAFXZm5PaaxYM" class="instagram">
+        <i class="fa fa-instagram"></i>
+    </a>
+    <a href="https://www.google.com/search?q=computer+science+meme&tbm=isch&ved=2ahUKEwiT86qzirTwAhVW9Z4KHR7CADwQ2-cCegQIABAA&oq=computer+science+meme&gs_lcp=CgNpbWcQAzIECCMQJzIFCAAQsQMyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEB46BggAEAUQHjoGCAAQCBAeUO0OWNgPYKMRaABwAHgAgAFQiAGKAZIBATKYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=Fl6TYJOQHtbq-wSehIPgAw&bih=947&biw=1920&rlz=1C1CHBF_enUS748US748&safe=strict#imgrc=ESAFXZm5PaaxYM" class="youtube">
+        <i class="fa fa-youtube"></i>
+    </a>
+</div>
+</Body>
 </html>
