--- a/public/restaurant/mainmenu.html
+++ b/public/restaurant/mainmenu.html
@@ -1,10 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+        <meta charset="UTF-8">
+        <title>Sean's SaladWorks</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-<body>
 
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="mainmenu.html">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Reservations.html">Reservations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Specials.html">Specials</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        More
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="Staff.html">Meet the staff</a></li>
+                        <li><a class="dropdown-item" href="Locations.html">Locations</a></li>
+                        <li><a class="dropdown-item" href="Socialmedia.html">Social Media</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<!--Menu-->
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Beetroot Salad - $9.50</b>
+        <br>
+        <br>
+        Calories ~ 190
+    </div>
+
+    <div class="picture">
+        <img src="/images/BeetrootSalad.jpg" width="109%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Fattoush Salad - $8</b>
+        <br>
+        <br>
+        Calories ~ 200
+    </div>
+
+    <div class="picture">
+        <img src="/images/FattoushSalad.jpg" width="40%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Greek Salad - $9.50</b>
+        <br>
+        <br>
+        Calories ~ 170
+    </div>
+
+    <div class="picture">
+        <img src="/images/GreekSalad.jpeg" width="48%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Mexican Salad - $11</b>
+        <br>
+        <br>
+        Calories ~ 210
+    </div>
+
+    <div class="picture">
+        <img src="/images/MexicanSalad.jpg" width="60%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Rainbow Salad - $12</b>
+        <br>
+        <br>
+        Calories ~ 250
+    </div>
+
+    <div class="picture">
+        <img src="/images/Rainbow Salad.jpg" width="68.5%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Spring Salad - $9</b>
+        <br>
+        <br>
+        Calories ~ 240
+    </div>
+
+    <div class="picture">
+        <img src="/images/SpringSalad.jpg" width="80%" height=auto>
+    </div>
+
+</div>
+<br>
+
+<br>
+
+<!--Bottom Box-->
+
+<div class="content">
+    <div class="jumbotron text-center">
+        <h1><u>Drinks</u></h1>
+        <p>Strawberry lemonade -- $3</p>
+        <p>Dr. Pepper -- $2</p>
+        <p>Rootbeer -- $2</p>
+        <p>Coca Cola -- $2</p>
+        <p>Sprite -- $2</p>
+        <p>Iced Tea -- $1</p>
+    </div>
+</div>
 </body>
 </html>
