--- a/public/restaurant/Sean's Saladworks.html
+++ b/public/restaurant/Sean's Saladworks.html
@@ -9,7 +9,7 @@
 
 <!--Header-->
 
-<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="" class = backgroundcolor>
 <nav class="navbar navbar-expand-lg navbar-midnightblue bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
@@ -27,15 +27,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Specials.html">Specials</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            More
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="Staff.html">Meet the staff</a></li>
-                            <li><a class="dropdown-item" href="Locations.html">Locations</a></li>
-                            <li><a class="dropdown-item" href="Socialmedia.html">Social Media</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Staff.html">Meet The Staff</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Socialmedia.html">Where To Find Us</a>
                     </li>
                 </ul>
             </div>
@@ -44,15 +40,15 @@
 
 <!--Welcome Card-->
 
-<header class="masthead" class="home">
+<header class="home">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12 text-center">
                 <div class="card" style="width: 16rem; height: 24rem;">
                     <div class="card-body">
-                        <h3 class="card-title" style=" font-family: 'Franklin Gothic Book', fantasy;
+                        <h3 class="DarkBlue" style="
                         font-size: 30pt;"><b>Welcome</b> </h3>
-                        <p class="card-text" style="color: midnightblue; padding: 18px; font-size: 17px;">Welcome to Sean's SaladWorks, where we offer delicious, scratch-made, craveable favorites served from the heart.
+                        <p class="card-text" style="color: darkslategray; padding: 18px; font-size: 17px;">Welcome to Sean's SaladWorks, where we offer delicious, scratch-made, craveable favorites served from the heart.
                             You’ll find fresh, healthy fare and gracious hospitality at our sitdown salad restaurant.</p>
                         <a href="Reservations.html" class="btn btn-primary" style="background: lightskyblue; border: none">Make a reservation</a>
                     </div>
@@ -66,8 +62,8 @@
 
 <div class="content">
     <div class="jumbotron text-center">
-        <h1>Sean's Salad Works</h1>
-        <p>
+        <h1 class="DarkBlue"> Sean's Salad Works </h1>
+        <p style="color: darkslategray;">
             Sean's Salad Works was a dream come true idea designed by Sean Hussey and Skyler Vez during thier college days at Seattle Pacific University.
             Aspiring to cut down on cafeteria food, Chef Sean began to create and sell custom salads to friends and students at SPU.
             Chef Skyler came and added his own technical elements to the business and in 2021, the two established the company in the heart of Queen Anne Washington.
