--- a/public/restaurant/Specials.html
+++ b/public/restaurant/Specials.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
-<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="" class="backgroundcolor">
+<nav class="navbar navbar-expand-lg navbar-midnightblue bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,15 +25,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="Specials.html">Specials</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        More
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="Staff.html">Meet the staff</a></li>
-                        <li><a class="dropdown-item" href="Locations.html">Locations</a></li>
-                        <li><a class="dropdown-item" href="Socialmedia.html">Social Media</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="Staff.html">Meet The Staff</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Socialmedia.html">Where To Find Us</a>
                 </li>
             </ul>
         </div>
