--- a/public/restaurant/Socialmedia.html
+++ b/public/restaurant/Socialmedia.html
@@ -2,6 +2,52 @@
 <html lang="en">
 <!Doctype Html>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Sean's SaladWorks</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
+<nav class="navbar navbar-expand-lg navbar-midnightblue bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="mainmenu.html">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Reservations.html">Reservations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Specials.html">Specials</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Staff.html">Meet The Staff</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Socialmedia.html">Where To Find Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+
+
+
 <Head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
@@ -9,10 +55,9 @@
         Add the Sticky icons of social media
     </Title>
     <style>
-        /* Style the Sticky icons on web page */
         .stickyicon-list {
             position: fixed;
-            top: 200px;
+            top: 300px;
             transform: translateY(-50%);
         }
         .stickyicon-list a {
@@ -23,13 +68,12 @@
             color: white;
             font-size: 20px;
         }
-        /* HOver affect on sticky social media icons */
         .stickyicon-list a:hover {
             color: #000;
             width:10px;
         }
 
-        /* Now we have to design each icon of social media */
+
         .facebook {
             background: #3b5998;
             color: white;
@@ -54,14 +98,15 @@
             color: white;
             background: #c4302b;
         }
-        /*.color{*/
-        /*    background-color: lightskyblue;*/
-        /*}*/
+
     </style>
 </Head>
 <Body class="color">
 <h1 class="socialtext">To the left are our various social medias. Thanks for stopping by.</h1>
 
+<br>
+<br>
+<br>
 <br>
 
 <div class="stickyicon-list">
