--- a/public/restaurant/Staff.html
+++ b/public/restaurant/Staff.html
@@ -2,9 +2,133 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sean's SaladWorks</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-<body>
 
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="" class = backgroundcolor>
+<nav class="navbar navbar-expand-lg navbar-midnightblue bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="Sean's%20Saladworks.html"><img src="/images/ssw.jpg" alt="logo" style="width:70px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="mainmenu.html">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Reservations.html">Reservations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Specials.html">Specials</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Staff.html">Meet The Staff</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Socialmedia.html">Where To Find Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Sean Hussey</b>
+        <br>
+        <br>
+        Owner / Head Chef
+    </div>
+
+    <div class="picture">
+        <img src="/images/Sean.png" width="52%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Skyler Vez</b>
+        <br>
+        <br>
+        Owner / Head Chef
+    </div>
+
+    <div class="picture">
+        <img src="/images/IMG_0809.JPG" width="55.5%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Helen Miller</b>
+        <br>
+        <br>
+        Sous Chef
+    </div>
+
+    <div class="picture">
+        <img src="/images/helen.jpg" width="42%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Chad Bostwick</b>
+        <br>
+        <br>
+        Chef de Partie
+    </div>
+
+    <div class="picture">
+        <img src="/images/Chad.jpg" width="68.5%" height=auto%>
+    </div>
+
+</div>
+
+<br>
+
+<div class="center">
+
+    <div class="title">
+        <b>Grayson Jones</b>
+        <br>
+        <br>
+        Kitchen Porter
+    </div>
+
+    <div class="picture">
+        <img src="/images/Grayson.jpeg" width="185%" height=auto>
+    </div>
+
+</div>
+
+<br>
+
+
+<div class="content">
+    <div class="jumbotron text-center">
+        <p>We are thankful for our staff and for the abilities and experiences that has shaped their cooking expertise over the years. All these members - and more - have contributed to the founding and success of Sean's Salad Works.</p>
+    </div>
+</div>
 </body>
 </html>
