--- a/public/restaurant/Sean's Saladworks.html
+++ b/public/restaurant/Sean's Saladworks.html
@@ -64,7 +64,7 @@
     <div class="jumbotron text-center">
         <h1 class="DarkBlue"> Sean's Salad Works </h1>
         <p style="color: darkslategray;">
-            Sean's Salad Works was a dream come true idea designed by Sean Hussey and Skyler Vez during thier college days at Seattle Pacific University.
+            Sean's Salad Works was a dream come true idea designed by Sean Hussey and Skyler Vez during their college days at Seattle Pacific University.
             Aspiring to cut down on cafeteria food, Chef Sean began to create and sell custom salads to friends and students at SPU.
             Chef Skyler came and added his own technical elements to the business and in 2021, the two established the company in the heart of Queen Anne Washington.
             Today business is booming as critics have rated Sean's Salad Works a "top five restauraunt in the Seattle area."
